# kubevox

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/kubevox/: assistant.py  cli.py
src/kubevox/audio/: elevenlabs_speaker.py  whisper_transcriber.py
src/kubevox/llama/: __init__.py  llama_client.py  llama_tools.py
src/kubevox/registry/: function_executor.py  function_registry.py  k8s_functions.py
src/kubevox/utils/: timing.py
tests/llama/: test_llama_client.py  test_llama_tools.py
