[project]
name = "kubevox"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "elevenlabs>=1.50.7",
    "kubernetes>=32.0.0",
    "loguru>=0.7.3",
    "mlx-whisper>=0.4.1",
    "pynput>=1.7.7",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.1",
    "typer>=0.9.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubevox"]

[project.scripts]
kubevox = "kubevox.cli:app"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
lint.select = ["E", "F", "I"]
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Python version compatibility
target-version = "py310"
# Line length matches black's default
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "aioresponses>=0.7.8",
    "ruff>=0.9.5",
]
